--- a/index.html
+++ b/index.html
@@ -113,6 +113,6 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="javaScript.js"></script>
+    <script src="./javascript.js"></script>
   </body>
 </html>
